# music-visualizer

./: Makefile  mkdocs.yml  pyproject.toml
music_visualizer/: __main__.py  app.py  base.py
music_visualizer/graphics/: ball.py  platform.py
tests/: test_base.py
