[tool.poetry]
name = "music-visualizer"
version = "0.1.0"
description = "This project will implement a music visualizer"
authors = ["OliverRissato <oliverrissato@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

coverage = "^7.5.4"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
music_visualizer = 'music_visualizer.__main__:main'